--- a/DS_Challenge_01.ipynb
+++ b/DS_Challenge_01.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -251,6 +251,343 @@
    ],
    "source": [
     "fileBZ2.closed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfS_bookings = pd.read_csv('./bookings.sample.csv.bz2', sep='^', compression='bz2',nrows=10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['act_date           ', 'source', 'pos_ctry', 'pos_iata', 'pos_oid  ',\n",
+       "       'rloc          ', 'cre_date           ', 'duration', 'distance',\n",
+       "       'dep_port', 'dep_city', 'dep_ctry', 'arr_port', 'arr_city', 'arr_ctry',\n",
+       "       'lst_port', 'lst_city', 'lst_ctry', 'brd_port', 'brd_city', 'brd_ctry',\n",
+       "       'off_port', 'off_city', 'off_ctry', 'mkt_port', 'mkt_city', 'mkt_ctry',\n",
+       "       'intl', 'route          ', 'carrier', 'bkg_class', 'cab_class',\n",
+       "       'brd_time           ', 'off_time           ', 'pax', 'year', 'month',\n",
+       "       'oid      '],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfS_bookings.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>act_date</th>\n",
+       "      <th>source</th>\n",
+       "      <th>pos_ctry</th>\n",
+       "      <th>pos_iata</th>\n",
+       "      <th>pos_oid</th>\n",
+       "      <th>rloc</th>\n",
+       "      <th>cre_date</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>dep_port</th>\n",
+       "      <th>...</th>\n",
+       "      <th>route</th>\n",
+       "      <th>carrier</th>\n",
+       "      <th>bkg_class</th>\n",
+       "      <th>cab_class</th>\n",
+       "      <th>brd_time</th>\n",
+       "      <th>off_time</th>\n",
+       "      <th>pax</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>oid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-03-05 00:00:00</td>\n",
+       "      <td>1A</td>\n",
+       "      <td>DE</td>\n",
+       "      <td>a68dd7ae953c8acfb187a1af2dcbe123</td>\n",
+       "      <td>1a11ae49fcbf545fd2afc1a24d88d2b7</td>\n",
+       "      <td>ea65900e72d71f4626378e2ebd298267</td>\n",
+       "      <td>2013-02-22 00:00:00</td>\n",
+       "      <td>1708</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ZRH</td>\n",
+       "      <td>...</td>\n",
+       "      <td>LHRZRH</td>\n",
+       "      <td>VI</td>\n",
+       "      <td>T</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>2013-03-07 08:50:00</td>\n",
+       "      <td>2013-03-07 11:33:37</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NULL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-03-26 00:00:00</td>\n",
+       "      <td>1A</td>\n",
+       "      <td>US</td>\n",
+       "      <td>e612b9eeeee6f17f42d9b0d3b79e75ca</td>\n",
+       "      <td>7437560d8f276d6d05eeb806d9e7edee</td>\n",
+       "      <td>737295a86982c941f1c2da9a46a14043</td>\n",
+       "      <td>2013-03-26 00:00:00</td>\n",
+       "      <td>135270</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SAL</td>\n",
+       "      <td>...</td>\n",
+       "      <td>SALATLCLT</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>L</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>2013-04-12 13:04:00</td>\n",
+       "      <td>2013-04-12 22:05:40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NULL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-03-26 00:00:00</td>\n",
+       "      <td>1A</td>\n",
+       "      <td>US</td>\n",
+       "      <td>e612b9eeeee6f17f42d9b0d3b79e75ca</td>\n",
+       "      <td>7437560d8f276d6d05eeb806d9e7edee</td>\n",
+       "      <td>737295a86982c941f1c2da9a46a14043</td>\n",
+       "      <td>2013-03-26 00:00:00</td>\n",
+       "      <td>135270</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SAL</td>\n",
+       "      <td>...</td>\n",
+       "      <td>CLTATLSAL</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>U</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>2013-07-15 07:00:00</td>\n",
+       "      <td>2013-07-15 11:34:51</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NULL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-03-26 00:00:00</td>\n",
+       "      <td>1A</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>0f984b3bb6bd06661c95529bbd6193bc</td>\n",
+       "      <td>36472c6dbaf7afec9136ac40364e2794</td>\n",
+       "      <td>5ecf00fdcbcec761c43dc7285253d0c1</td>\n",
+       "      <td>2013-03-26 00:00:00</td>\n",
+       "      <td>30885</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AKL</td>\n",
+       "      <td>...</td>\n",
+       "      <td>AKLHKGSVO</td>\n",
+       "      <td>XK</td>\n",
+       "      <td>G</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>2013-04-24 23:59:00</td>\n",
+       "      <td>2013-04-25 16:06:31</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>3</td>\n",
+       "      <td>SYDA82546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-03-26 00:00:00</td>\n",
+       "      <td>1A</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>0f984b3bb6bd06661c95529bbd6193bc</td>\n",
+       "      <td>36472c6dbaf7afec9136ac40364e2794</td>\n",
+       "      <td>5ecf00fdcbcec761c43dc7285253d0c1</td>\n",
+       "      <td>2013-03-26 00:00:00</td>\n",
+       "      <td>30885</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AKL</td>\n",
+       "      <td>...</td>\n",
+       "      <td>SVOHKGAKL</td>\n",
+       "      <td>XK</td>\n",
+       "      <td>G</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>2013-05-14 20:15:00</td>\n",
+       "      <td>2013-05-16 10:44:50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>3</td>\n",
+       "      <td>SYDA82546</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 38 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   act_date             source  pos_ctry                          pos_iata  \\\n",
+       "0  2013-03-05 00:00:00  1A      DE        a68dd7ae953c8acfb187a1af2dcbe123   \n",
+       "1  2013-03-26 00:00:00  1A      US        e612b9eeeee6f17f42d9b0d3b79e75ca   \n",
+       "2  2013-03-26 00:00:00  1A      US        e612b9eeeee6f17f42d9b0d3b79e75ca   \n",
+       "3  2013-03-26 00:00:00  1A      AU        0f984b3bb6bd06661c95529bbd6193bc   \n",
+       "4  2013-03-26 00:00:00  1A      AU        0f984b3bb6bd06661c95529bbd6193bc   \n",
+       "\n",
+       "                          pos_oid                      rloc            \\\n",
+       "0  1a11ae49fcbf545fd2afc1a24d88d2b7  ea65900e72d71f4626378e2ebd298267   \n",
+       "1  7437560d8f276d6d05eeb806d9e7edee  737295a86982c941f1c2da9a46a14043   \n",
+       "2  7437560d8f276d6d05eeb806d9e7edee  737295a86982c941f1c2da9a46a14043   \n",
+       "3  36472c6dbaf7afec9136ac40364e2794  5ecf00fdcbcec761c43dc7285253d0c1   \n",
+       "4  36472c6dbaf7afec9136ac40364e2794  5ecf00fdcbcec761c43dc7285253d0c1   \n",
+       "\n",
+       "   cre_date             duration  distance  dep_port    ...      \\\n",
+       "0  2013-02-22 00:00:00      1708         0  ZRH         ...       \n",
+       "1  2013-03-26 00:00:00    135270         0  SAL         ...       \n",
+       "2  2013-03-26 00:00:00    135270         0  SAL         ...       \n",
+       "3  2013-03-26 00:00:00     30885         0  AKL         ...       \n",
+       "4  2013-03-26 00:00:00     30885         0  AKL         ...       \n",
+       "\n",
+       "   route           carrier  bkg_class  cab_class  brd_time             \\\n",
+       "0  LHRZRH               VI  T          Y          2013-03-07 08:50:00   \n",
+       "1  SALATLCLT            NV  L          Y          2013-04-12 13:04:00   \n",
+       "2  CLTATLSAL            NV  U          Y          2013-07-15 07:00:00   \n",
+       "3  AKLHKGSVO            XK  G          Y          2013-04-24 23:59:00   \n",
+       "4  SVOHKGAKL            XK  G          Y          2013-05-14 20:15:00   \n",
+       "\n",
+       "   off_time            pax  year month  oid        \n",
+       "0  2013-03-07 11:33:37  -1  2013     3  NULL       \n",
+       "1  2013-04-12 22:05:40   1  2013     3  NULL       \n",
+       "2  2013-07-15 11:34:51   1  2013     3  NULL       \n",
+       "3  2013-04-25 16:06:31   1  2013     3  SYDA82546  \n",
+       "4  2013-05-16 10:44:50   1  2013     3  SYDA82546  \n",
+       "\n",
+       "[5 rows x 38 columns]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfS_bookings.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfS_bookings['pax2'] = dfS_bookings['pax'].abs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['act_date           ', 'source', 'pos_ctry', 'pos_iata', 'pos_oid  ',\n",
+       "       'rloc          ', 'cre_date           ', 'duration', 'distance',\n",
+       "       'dep_port', 'dep_city', 'dep_ctry', 'arr_port', 'arr_city', 'arr_ctry',\n",
+       "       'lst_port', 'lst_city', 'lst_ctry', 'brd_port', 'brd_city', 'brd_ctry',\n",
+       "       'off_port', 'off_city', 'off_ctry', 'mkt_port', 'mkt_city', 'mkt_ctry',\n",
+       "       'intl', 'route          ', 'carrier', 'bkg_class', 'cab_class',\n",
+       "       'brd_time           ', 'off_time           ', 'pax', 'year', 'month',\n",
+       "       'oid      ', 'pax2'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfS_bookings.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "arr_port\n",
+       "JFK         300\n",
+       "LHR         288\n",
+       "LAX         285\n",
+       "CDG         238\n",
+       "PVG         223\n",
+       "SFO         221\n",
+       "MCO         212\n",
+       "HKG         210\n",
+       "JED         206\n",
+       "MNL         201\n",
+       "Name: pax2, dtype: int64"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfS_bookings.groupby(['arr_port'])['pax2'].sum().sort_values(ascending=False).head(10)"
    ]
   },
   {
