--- a/DS_Challenge_01.ipynb
+++ b/DS_Challenge_01.ipynb
@@ -228,6 +228,7 @@
     "    k=0\n",
     "    for line in fileBZ2:\n",
     "        k+=1\n",
+    "# Contador para que salga del loop (explorar-controlar tamaño ejemplo)\n",
     "#        if k==10:\n",
     "#            break\n",
     "print(k)"
@@ -561,7 +562,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_Top10 = dfS_bookings.groupby(['arr_port'])['pax2'].sum().sort_values(ascending=False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -581,13 +591,87 @@
        "Name: pax2, dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfS_bookings.groupby(['arr_port'])['pax2'].sum().sort_values(ascending=False).head(10)"
+    "sample_Top10 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_Top10.to_csv (r'02_sample.csv', header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "02_sample.csv\t\t DS_Challenge_Searches_03.ipynb\r\n",
+      "bookings.sample.csv.bz2  README.md\r\n",
+      "DS_Challenge_01.ipynb\t searches.sample.csv.bz2\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500000\n",
+      "1000000\n",
+      "           pax\n",
+      "arr_port      \n",
+      "LHR       4679\n",
+      "LHR       4202\n",
+      "MCO       3899\n",
+      "LAX       3642\n",
+      "LAS       3559\n",
+      "JFK       3490\n",
+      "CDG       3432\n",
+      "LAX       3411\n",
+      "LAS       3404\n",
+      "MIA       3207\n",
+      "Total rows: 1000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Leer archivo completo\n",
+    "\n",
+    "list_bookings = pd.DataFrame([])\n",
+    "tot_lines = 0\n",
+    "reader =  pd.read_csv('/home/dsc/Data/challenge/bookings.csv.bz2', sep='^', compression='bz2', iterator=True, chunksize=500000)\n",
+    "\n",
+    "for df in reader: \n",
+    "    df2=pd.DataFrame(df.groupby(['arr_port'])['pax'].sum())\n",
+    "    list_bookings = list_bookings.append(df2)\n",
+    "    tot_lines+=len(df)\n",
+    "    print(tot_lines)\n",
+    "    if tot_lines>=1000000:\n",
+    "        break\n",
+    "    \n",
+    "print(list_bookings.sort_values(by='pax', ascending = False).head(10))\n",
+    "print(\"Total rows: \" + str(tot_lines))"
    ]
   },
   {
