Completo Top 10 Airport - Pax

--- a/DS_Challenge_01.ipynb
+++ b/DS_Challenge_01.ipynb
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -639,19 +639,52 @@
      "text": [
       "500000\n",
       "1000000\n",
-      "           pax\n",
-      "arr_port      \n",
-      "LHR       4679\n",
-      "LHR       4202\n",
-      "MCO       3899\n",
-      "LAX       3642\n",
-      "LAS       3559\n",
-      "JFK       3490\n",
-      "CDG       3432\n",
-      "LAX       3411\n",
-      "LAS       3404\n",
-      "MIA       3207\n",
-      "Total rows: 1000000\n"
+      "1500000\n",
+      "2000000\n",
+      "2500000\n",
+      "3000000\n",
+      "3500000\n",
+      "4000000\n",
+      "4500000\n",
+      "5000000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dsc/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3020: DtypeWarning: Columns (7,8,27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5500000\n",
+      "6000000\n",
+      "6500000\n",
+      "7000000\n",
+      "7500000\n",
+      "8000000\n",
+      "8500000\n",
+      "9000000\n",
+      "9500000\n",
+      "10000000\n",
+      "10000010\n",
+      "arr_port\n",
+      "LHR         88809.0\n",
+      "MCO         70930.0\n",
+      "LAX         70530.0\n",
+      "LAS         69630.0\n",
+      "JFK         66270.0\n",
+      "CDG         64490.0\n",
+      "BKK         59460.0\n",
+      "MIA         58150.0\n",
+      "SFO         58000.0\n",
+      "DXB         55590.0\n",
+      "Name: pax, dtype: float64\n",
+      "Total rows: 10000010\n"
      ]
     }
    ],
@@ -663,15 +696,35 @@
     "reader =  pd.read_csv('/home/dsc/Data/challenge/bookings.csv.bz2', sep='^', compression='bz2', iterator=True, chunksize=500000)\n",
     "\n",
     "for df in reader: \n",
-    "    df2=pd.DataFrame(df.groupby(['arr_port'])['pax'].sum())\n",
+    "    df2=pd.DataFrame(df[['arr_port','pax']])\n",
     "    list_bookings = list_bookings.append(df2)\n",
     "    tot_lines+=len(df)\n",
     "    print(tot_lines)\n",
-    "    if tot_lines>=1000000:\n",
-    "        break\n",
+    "#    if tot_lines>=1000000:\n",
+    "#        break\n",
     "    \n",
-    "print(list_bookings.sort_values(by='pax', ascending = False).head(10))\n",
+    "print(list_bookings.groupby(['arr_port'])['pax'].sum().sort_values(ascending = False).head(10))\n",
     "print(\"Total rows: \" + str(tot_lines))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000000"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list_bookings)"
    ]
   },
   {
