--- a/DS_Challenge_01.ipynb
+++ b/DS_Challenge_01.ipynb
@@ -529,7 +529,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfS_bookings['pax2'] = dfS_bookings['pax'].abs()"
+    "# dfS_bookings['pax2'] = dfS_bookings['pax'].abs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfS_bookings['pax'].fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       False\n",
+       "1       False\n",
+       "2       False\n",
+       "3       False\n",
+       "4       False\n",
+       "5       False\n",
+       "6       False\n",
+       "7       False\n",
+       "8       False\n",
+       "9       False\n",
+       "10      False\n",
+       "11      False\n",
+       "12      False\n",
+       "13      False\n",
+       "14      False\n",
+       "15      False\n",
+       "16      False\n",
+       "17      False\n",
+       "18      False\n",
+       "19      False\n",
+       "20      False\n",
+       "21      False\n",
+       "22      False\n",
+       "23      False\n",
+       "24      False\n",
+       "25      False\n",
+       "26      False\n",
+       "27      False\n",
+       "28      False\n",
+       "29      False\n",
+       "        ...  \n",
+       "9969    False\n",
+       "9970    False\n",
+       "9971    False\n",
+       "9972    False\n",
+       "9973    False\n",
+       "9974    False\n",
+       "9975    False\n",
+       "9976    False\n",
+       "9977    False\n",
+       "9978    False\n",
+       "9979    False\n",
+       "9980    False\n",
+       "9981    False\n",
+       "9982    False\n",
+       "9983    False\n",
+       "9984    False\n",
+       "9985    False\n",
+       "9986    False\n",
+       "9987    False\n",
+       "9988    False\n",
+       "9989    False\n",
+       "9990    False\n",
+       "9991    False\n",
+       "9992    False\n",
+       "9993    False\n",
+       "9994    False\n",
+       "9995    False\n",
+       "9996    False\n",
+       "9997    False\n",
+       "9998    False\n",
+       "Name: pax, Length: 9999, dtype: bool"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfS_bookings['pax'].isnull()"
    ]
   },
   {
@@ -562,36 +652,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_Top10 = dfS_bookings.groupby(['arr_port'])['pax2'].sum().sort_values(ascending=False).head(10)"
+    "sample_Top10 = dfS_bookings.groupby(['arr_port'])['pax'].sum().sort_values(ascending=False).head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "arr_port\n",
-       "JFK         300\n",
-       "LHR         288\n",
-       "LAX         285\n",
-       "CDG         238\n",
-       "PVG         223\n",
-       "SFO         221\n",
-       "MCO         212\n",
-       "HKG         210\n",
-       "JED         206\n",
-       "MNL         201\n",
-       "Name: pax2, dtype: int64"
+       "HKG         112\n",
+       "LGA          95\n",
+       "ORD          94\n",
+       "JFK          92\n",
+       "SFO          91\n",
+       "LAX          91\n",
+       "MCO          90\n",
+       "DCA          82\n",
+       "DEN          79\n",
+       "LHR          76\n",
+       "Name: pax, dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -646,21 +736,7 @@
       "3500000\n",
       "4000000\n",
       "4500000\n",
-      "5000000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/dsc/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3020: DtypeWarning: Columns (7,8,27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "5000000\n",
       "5500000\n",
       "6000000\n",
       "6500000\n",
@@ -696,6 +772,7 @@
     "reader =  pd.read_csv('/home/dsc/Data/challenge/bookings.csv.bz2', sep='^', compression='bz2', iterator=True, chunksize=500000)\n",
     "\n",
     "for df in reader: \n",
+    "    df['pax'].fillna(0, inplace=True)\n",
     "    df2=pd.DataFrame(df[['arr_port','pax']])\n",
     "    list_bookings = list_bookings.append(df2)\n",
     "    tot_lines+=len(df)\n",
@@ -709,16 +786,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1000000"
+       "10000010"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
